--- a/basic-snippet.html
+++ b/basic-snippet.html
@@ -13,7 +13,10 @@
 
   <h3>Online references</h3>
   <ul>
-    <li></li>
+    <li><a href="w3schools.com/tags/tag_p.asp">Paragraph tag reference 1</a></li>
+    <li><a href="https://www.tutorialspoint.com/html/html_p_tag.htm">Paragraph tag reference 2</a></li>
+    <li><a href="https://www.w3schools.com/tags/tag_a.asp">Anchor tag reference 1</a></li>
+    <li><a href="https://www.freecodecamp.org/news/the-html-a-tag-anchor-tag-example-code/">Anchor tag reference 2</a></li>
   </ul>
 
   <h3>Relationship between tags in terms of nesting</h3>
