Finished second section of basic-tags.html

--- a/basic-tags.html
+++ b/basic-tags.html
@@ -44,12 +44,20 @@
 
   <section>
     <ul>
-      <li>List item 1</li>
-      <li>List item 2</li>
-      <li><<ul>
-        <li>Nested list item 1</li>
-      </ul></li>
+      <li>Unordered list item 1</li>
+      <li>Unordered list item 2</li>
+      <ul>
+        <li>Nested unordered list item 1</li>
+      </ul>
     </ul>
+
+    <ol>
+      <ol>
+        <li><p>Nested ordered list item 1</p></li>
+        <li><img src="./assets/img/nested-list-two.png" width="128" height="59"></li>
+      </ol>
+      <li><p>Unnested ordered list item 2</p></li>
+    </ol>
   </section>
 </body>
 </html>
