Finished third section of basic-tags.html

--- a/basic-tags.html
+++ b/basic-tags.html
@@ -43,6 +43,7 @@
   </section>
 
   <section>
+    <h2>Unordered and Ordered lists</h2>
     <ul>
       <li>Unordered list item 1</li>
       <li>Unordered list item 2</li>
@@ -58,6 +59,56 @@
       </ol>
       <li><p>Unnested ordered list item 2</p></li>
     </ol>
+  </section>
+
+  <section>
+    <h2>Table</h2>
+
+    <table>
+      <tr>
+        <th>Table Heading 1</th>
+        <th>Table Heading 2</th>
+        <th>Table Heading 3</th>
+      </tr>
+
+      <tr>
+        <td>1, 1</td>
+        <td>1, 2</td>
+        <td>1, 3</td>
+      </tr>
+
+      <tr>
+        <td>2, 1</td>
+        <td>2, 2</td>
+        <td>2, 3</td>
+      </tr>
+    </table>
+
+    <table>
+      <tr>
+        <th>Table Heading 1</th>
+        <th>Table Heading 2</th>
+        <th>Table Heading 3</th>
+        <th>Table Heading 4</th>
+      </tr>
+
+      <tr>
+        <td>1, 1</td>
+        <td>1, 2</td>
+        <td>1, 3</td>
+        <td>1, 4</td>
+      </tr>
+    </table>
+
+    <table>
+      <tr>
+        <th>Table Heading 1</th>
+      </tr>
+
+      <tr>
+        <td>1, 1</td>
+      </tr>
+    </table>
   </section>
 </body>
 </html>
