Updated ordered/unordered lists in basic-tags.html

--- a/basic-tags.html
+++ b/basic-tags.html
@@ -52,12 +52,33 @@
       </ul>
     </ul>
 
+    <br>
+
+    <ul>
+      <li>Unordered list item 3</li>
+      <ul>
+        <li>Nested unordered list item 2</li>
+        <li><a href="https://www.google.com/">Nested unordered anchor</a></li>
+      </ul>
+    </ul>
+
     <ol>
+      <li>Unnested ordered list item 1</li>
       <ol>
-        <li><p>Nested ordered list item 1</p></li>
+        <li><p>Nested ordered paragraph</p></li>
         <li><img src="./assets/img/nested-list-two.png" width="128" height="59"></li>
       </ol>
-      <li><p>Unnested ordered list item 2</p></li>
+      <li><p>Unnested ordered list paragraph</p></li>
+    </ol>
+
+    <ol>
+      <li><p>Unnested ordered paragraph</p></li>
+      <ol>
+        <li><p>Nested x1</p></li>
+        <ol>
+          <li><p>Nested x2</p></li>
+        </ol>
+      </ol>
     </ol>
   </section>
 
