Changed font-size: italics to font-style: italics

--- a/basic-css.html
+++ b/basic-css.html
@@ -7,7 +7,7 @@
     body {
       background-image: url("https://c.tadst.com/gfx/600x337/rainbow.jpg?1")
     }
-    
+
 
     #bold {
       font-weight: bold;
@@ -24,7 +24,7 @@
     }
 
     div p {
-      font-size: italics;
+      font-style: italics;
     }
 
     div > p {
