Removed the s from font-size: italics

--- a/basic-css.html
+++ b/basic-css.html
@@ -24,7 +24,7 @@
     }
 
     div p {
-      font-style: italics;
+      font-style: italic;
     }
 
     div > p {
@@ -50,7 +50,7 @@
   <div>
     <p>This paragraph is in italics.</p>
     <ul>
-      <li><p>This one will be too because font-size: italics is in a descendant combinator</p></li>
+      <li><p>This one will be too because font-style: italic is in a descendant combinator</p></li>
     </ul>
   </div>
 
