Added red class selector

--- a/basic-tags-styles.html
+++ b/basic-tags-styles.html
@@ -8,6 +8,10 @@
       border: solid green;
     }
 
+    .red {
+      color: red;
+    }
+
     section #text-and-image > h2 {
       color: green;
     }
