Removed an extra selector from child combinator

--- a/basic-tags-styles.html
+++ b/basic-tags-styles.html
@@ -12,7 +12,7 @@
       color: red;
     }
 
-    section #text-and-image > h2 {
+    #text-and-image > h2 {
       color: green;
     }
   </style>
