Added video not supported between video tags

--- a/basic-multimedia.html
+++ b/basic-multimedia.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <video src="file_example_MOV_480_700kB.mov" controls></video>
+  <video src="file_example_MOV_480_700kB.mov" controls>Video not supported</video>
   <br>
   <audio src="file_example_WAV_1MG.wav" controls></audio>
 </body>
