Added alt text to basic-image.html

--- a/basic-image.html
+++ b/basic-image.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <p>Basic Image.html</p>
-  <img src="./assets/img/basic-image.webp">
+  <img src="./assets/img/basic-image.webp" alt="Picture of wooden squares that spell out Basics">
 </body>
 </html>
