Added alt text to basic-css.html

--- a/basic-css.html
+++ b/basic-css.html
@@ -61,7 +61,7 @@
   </div>
 
   <div class="image">
-    <img src="assets/img/css-selector.webp">
+    <img src="assets/img/css-selector.webp" alt="Summary of different types of CSS combinators">
   </div>
 
   <div>
