Added alt text to basic-tags.html

--- a/basic-tags-styles.html
+++ b/basic-tags-styles.html
@@ -61,7 +61,7 @@
     <br>
 
     <h3 class="red">The image tag</h3>
-    <img src="./assets/img/one-col-layout-code.gif">
+    <img src="./assets/img/one-col-layout-code.gif" alt="Example of a one-column layout in HTML">
   </section>
 
   <br>
@@ -93,7 +93,7 @@
       <li>Unnested ordered list item 1</li>
       <ol>
         <li><p class="red">Nested ordered paragraph</p></li>
-        <li><img src="./assets/img/nested-list-two.png" width="128" height="59"></li>
+        <li><img src="./assets/img/nested-list-two.png" alt="Example of a nested ordered list" width="128" height="59"></li>
       </ol>
       <li><p>Unnested ordered list paragraph</p></li>
     </ol>
