Added alt text to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <img src="assets/img/rainbow.jpeg">
+      <img src="assets/img/rainbow.jpeg" alt="Picture of a rainbow">
     </div>
   </div>
 
