Added language attribute and removed selection tags from table

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <!--https://getbootstrap.com/docs/5.2/getting-started/introduction/-->
 <head>
   <title>Basic Tags</title>
@@ -27,14 +27,12 @@
       </div>
 
       <div class="col-lg">
-        <selection>
-          <ul>
-            <li>input</li>
-            <li>textarea</li>
-            <li>label</li>
-            <li>button</li>
-          </ul>
-        </selection>
+        <ul>
+          <li>input</li>
+          <li>textarea</li>
+          <li>label</li>
+          <li>button</li>
+        </ul>
       </div>
 
       <div class="col-lg">
