Fixed issues for basic-css

--- a/basic-css.html
+++ b/basic-css.html
@@ -5,7 +5,7 @@
 
   <style>
     *{
-      margin: 5px, 4px;
+      margin: 5px;
       letter-spacing: 2px;
       line-height: 5px;
     }
@@ -15,7 +15,7 @@
     }
 
     #lower {
-      text-transformation: lowercase;
+      text-transform: lowercase;
       font-size: 12px;
     }
 
