--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <div class="container">
     <div class="row">
       <div class="col-lg">
-        <p>basic-css.html</p>
-        <p>basic-image.html</p>
-        <p>basic-multimedia.html</p>
-        <p>basic-snippet.html</p>
-        <p>basic-structure.html</p>
-        <p>basic-tags-styles.html</p>
-        <p>basic-tags.html</p>
+        <a href="https://github.com/alli679/learn-html-css-milestones/blob/main/basic-css.html">basic-css.html</a>
+        <a href="https://github.com/alli679/learn-html-css-milestones/blob/main/basic-image.html">basic-image.html</a>
+        <a href="https://github.com/alli679/learn-html-css-milestones/blob/main/basic-multimedia.html">basic-multimedia.html</a>
+        <a href="https://github.com/alli679/learn-html-css-milestones/blob/main/basic-snippet.html">basic-snippet.html</a>
+        <a href="https://github.com/alli679/learn-html-css-milestones/blob/main/basic-structure.html">basic-structure.html</a>
+        <a href="https://github.com/alli679/learn-html-css-milestones/blob/main/basic-tags-styles.html">basic-tags-styles.html</a>
+        <a href="https://github.com/alli679/learn-html-css-milestones/blob/main/basic-tags.html">basic-tags.html</a>
       </div>
 
       <div class="col-lg">
